// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async error 1`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER testMethod:",
    "{ }",
  ],
]
`;

exports[`async error 2`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ERROR testMethod: { } 
",
    [Error: some error],
  ],
]
`;

exports[`log async 1`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER testMethod:",
    "{ a: 1 }",
  ],
  Array [
    Object {
      "id": 1,
    },
    " EXIT testMethod:",
    "11",
  ],
]
`;

exports[`log sync 1`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER testMethod:",
    "{ a: 1 }",
  ],
  Array [
    Object {
      "id": 1,
    },
    " EXIT testMethod:",
    "11",
  ],
]
`;

exports[`remove output 1`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER testMethod:",
    "{ a: 1 }",
  ],
  Array [
    Object {
      "id": 1,
    },
    " EXIT testMethod:",
    "<removed>",
  ],
]
`;

exports[`sanitized input 1`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER testMethod:",
    "{ password: '<removed>',
  values: { accessToken: '<removed>', foo: 123 } }",
  ],
  Array [
    Object {
      "id": 1,
    },
    " EXIT testMethod:",
    "'ok'",
  ],
]
`;

exports[`sync error 1`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ENTER testMethod:",
    "{ }",
  ],
]
`;

exports[`sync error 2`] = `
Array [
  Array [
    Object {
      "id": 1,
    },
    "ERROR testMethod: { } 
",
    [Error: some error],
  ],
]
`;
